test: test Login API
